kubernetes/base/mlflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: ml-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      nodeSelector:
        workload-role: compute
      containers:
        - name: mlflow
          image: ghcr.io/mlflow/mlflow:v3.8.1
          imagePullPolicy: IfNotPresent
          command:
            - mlflow
            - server
            - --backend-store-uri
            - postgresql+psycopg2://airflow:airflow@postgres:5432/mlflow
            - --default-artifact-root
            - file:///mlartifacts
            - --serve-artifacts
            - --host
            - "0.0.0.0"
            - --port
            - "5000"
            - --allowed-hosts
            - "*"
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: mlflow-artifacts
              mountPath: /mlartifacts
            - name: extra-pkgs
              mountPath: /extra-pkgs
          resources:
            requests:
              cpu: 60m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 2500Mi
      volumes:
        - name: mlflow-artifacts
          persistentVolumeClaim:
            claimName: mlflow-artifacts
        - name: extra-pkgs
          emptyDir: {}
